CNumber objects are not immutable.